--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,6 +22,7 @@
 @import 'pages/home';
 @import 'pages/contact';
 @import 'pages/register';
+@import 'pages/about-us';
 
 @import 'themes/theme';
 @import 'themes/admin';
