--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -178,7 +178,7 @@
 @media screen and (max-width: 505px){
 
     .user-navbar{
-        visibility: hidden;
+        display: none;
         
     }
 }
