--- a/sass/components/_search.scss
+++ b/sass/components/_search.scss
@@ -16,11 +16,12 @@
     }
     &__products-count{
         padding: 1rem;
+        font-size: .8rem;
     }
     &__products-search-container{
         text-align: center;
         background-color:$color-background;
-        padding: 2rem;
+        padding: .5rem;
         margin-bottom: 1rem;
 
     }
