--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -22,6 +22,9 @@ html
         width: 80px;
         filter: grayscale(20%);
     }
+    &__link{
+         url: "https://wa.me/543512531103?text=Hola%20Ranson%20and%20Wilder%20";
+    }
 }
 
 .swipe-up{
