--- a/css/main.css
+++ b/css/main.css
@@ -342,6 +342,14 @@ body {
   align-items: center;
   justify-content: center;
 }
+.card__btnTextDet {
+  display: inline;
+  visibility: hidden;
+}
+.card__btnTextCart {
+  display: inline;
+  visibility: hidden;
+}
 .card__btn-cart {
   position: relative;
   right: -4.8rem;
@@ -351,10 +359,11 @@ body {
   border-radius: 10px 0px 0px 10px;
   margin-bottom: 0.8rem;
 }
-.card__btn-cart:hover {
+.card__btn-cart:hover, .card__btnTextCart {
   right: 0rem;
   transition: all 0.3s ease-out;
   background-color: rgb(27, 26, 26);
+  visibility: visible;
 }
 .card__btn {
   position: relative;
@@ -364,10 +373,11 @@ body {
   padding: 1rem;
   border-radius: 0px 10px 10px 0px;
 }
-.card__btn:hover {
+.card__btn:hover, .card__btnTextDet {
   right: 0rem;
   transition: all 0.3s ease-out;
   background-color: rgb(27, 26, 26);
+  visibility: visible;
 }
 .card__date {
   /* visibility: hidden; */
@@ -519,6 +529,9 @@ html {
 .whatsapp-container__img:hover {
   width: 80px;
   filter: grayscale(20%);
+}
+.whatsapp-container__link {
+  url: "https://wa.me/543512531103?text=Hola%20Ranson%20and%20Wilder%20";
 }
 
 .swipe-up {
