--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,12 +1,13 @@
 html
 {
   scroll-behavior: smooth;
+  font-size: 16px;
 }
 
 .cards-container{
     justify-content: center;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
 } 
 
 .whatsapp-container{
