--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,3 @@
-/* $color-bg-primary: rgb(89, 158, 104);
-$color-bg-secondary: rgb(98, 185, 57);
-$color-bg-date: rgb(89, 158, 104); */
-
 
 $color-bg-primary: rgb(139, 165, 139);
 $color-bg-secondary: rgb(85, 97, 85);
@@ -20,3 +16,7 @@ $color-wish-list-hover: rgb(238, 155, 155);
 
 $shadow0: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 $shadow1: rgba(0, 0, 0, 0.35) 0px 5px 5px;
+
+/* REGISTER ALERT */
+$color-alert-error: rgb(212, 96, 96) ;
+$color-alert-success: rgb(96, 212, 96) ;
