--- a/sass/pages/_register.scss
+++ b/sass/pages/_register.scss
@@ -1,12 +1,9 @@
-
-
-.section{
+.section {
     display: flex;
     justify-content: center;
 }
 
-
-.form-container{
+.form-container {
     padding: 1.5rem;
     background-color: $color-bg-primary;
     font-family: Arial, Helvetica, sans-serif;
@@ -15,7 +12,8 @@
     box-shadow: $shadow0;
     width: 60vh;
     border-radius: 5px;
-    &__item{
+
+    &__item {
         display: block;
         width: 100%;
         color: $color-background;
@@ -26,40 +24,95 @@
 
 .input-form-register {
     width: 100%;
-    padding: 8px ;
+    padding: 8px;
     border-radius: 3px;
     border: none;
-}   
+}
 
-.born-country-container__country{
+.born-country-container__country {
     width: 100%;
     padding: 5px;
     margin-bottom: 1rem;
 }
 
-.sex-container{
+.sex-container {
     padding: 1rem;
     font-family: Arial, Helvetica, sans-serif;
     color: $color-background;
 
-    &__label{
+    &__label {
         padding: 0.5rem;
     }
 }
 
-.therms-container{
+.therms-container {
     padding: 1rem;
     font-family: Arial, Helvetica, sans-serif;
     color: $color-background;
     margin-bottom: 1rem;
 
-    &__label{
+    &__label {
         margin-left: 0.5rem;
     }
 }
 
+.err {
+    border: 2px solid red;
+}
 
-.register__button{
+.alert {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    width: 95vw;
+    align-items: center;
+    opacity: 1;
+    transition: .3s all linear;
+
+    &__error {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        padding: .5rem;
+        border-radius: 5px;
+        width: 90vw;
+        background-color: $color-alert-error;
+        color: rgb(236, 232, 232);
+    }
+
+    &__sussecs {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        padding: .5rem;
+        border-radius: 5px;
+        width: 90vw;
+        background-color: $color-alert-success;
+        color: rgb(236, 232, 232);
+    }
+
+    &__title {
+        font-size: 1.5rem;
+        font-weight: bold;
+    }
+
+    &__hide {
+        opacity: 0;
+    }
+
+    &__button {
+        position: absolute;
+        cursor: pointer;
+        color: rgb(243, 234, 234);
+        top: .2rem;
+        right: .5rem;
+    }
+}
+
+
+.register__button {
     padding: .5rem .9rem .5rem .9rem;
     background-color: $color-bg-secondary;
     color: $color-background;
@@ -67,10 +120,8 @@
     border-radius: 4px;
 }
 
-
-
 @media only screen and (max-width: 600px) {
-    .form-container{
+    .form-container {
         width: 90vh;
     }
 }
