--- a/css/main.css
+++ b/css/main.css
@@ -350,6 +350,7 @@ body {
 .card__btn-cart {
   position: relative;
   right: -4.8rem;
+  cursor: pointer;
   color: rgb(236, 227, 227);
   background-color: rgb(139, 165, 139);
   padding: 1rem;
@@ -365,6 +366,7 @@ body {
 .card__btn {
   position: relative;
   right: 4.5rem;
+  cursor: pointer;
   color: rgb(236, 227, 227);
   background-color: rgb(139, 165, 139);
   padding: 1rem;
@@ -415,16 +417,19 @@ body {
   background-color: rgb(255, 255, 255);
 }
 .section-cards__title {
-  font-size: 1rem;
+  color: rgb(27, 26, 26);
+  font-size: 1.8rem;
   background-color: rgb(255, 255, 255);
 }
 .section-cards__subtitle {
-  font-size: 1rem;
+  color: rgb(27, 26, 26);
+  font-size: 0.8rem;
   background-color: rgb(255, 255, 255);
+  margin-bottom: 0.5rem;
 }
 .section-cards__products-count {
-  padding: 1rem;
-  font-size: 0.5rem;
+  padding: 0.6rem;
+  font-size: 0.8rem;
 }
 .section-cards__products-search-container {
   text-align: center;
@@ -443,13 +448,6 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  /*     &__input:not(:placeholder-shown){
-
-          + button{
-              transition:  all .8s ease-in;
-              transform: rotate(360deg);
-          } 
-      } */
   /* ANIMACION LUPA */
 }
 .product-search__input {
@@ -474,6 +472,7 @@ body {
   font-size: 1.2rem;
   font-weight: 500;
   box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3137254902);
+  cursor: pointer;
 }
 .product-search__btn:hover {
   border: 1px solid rgb(85, 97, 85);
@@ -647,6 +646,14 @@ iframe {
   color: rgb(255, 255, 255);
   margin-bottom: 1rem;
 }
+.form-container__itemGender {
+  display: block;
+  width: 100%;
+  color: rgb(255, 255, 255);
+}
+.form-container__button {
+  text-align: center;
+}
 
 .input-form-register {
   width: 100%;
@@ -661,17 +668,23 @@ iframe {
   margin-bottom: 1rem;
 }
 
-.sex-container {
-  padding: 1rem;
+.gender-container {
+  padding: 0.3rem;
   font-family: Arial, Helvetica, sans-serif;
   color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-.sex-container__label {
-  padding: 0.5rem;
+.gender-container__sec {
+  display: inline-flex;
+}
+.gender-container__label {
+  padding: 0.3rem;
 }
 
 .therms-container {
-  padding: 1rem;
+  padding: 0.3rem;
   font-family: Arial, Helvetica, sans-serif;
   color: rgb(255, 255, 255);
   margin-bottom: 1rem;
@@ -681,7 +694,7 @@ iframe {
 }
 
 .err {
-  border: 2px solid red;
+  box-shadow: 0px 0px 3px 1px red;
 }
 
 .alert {
@@ -721,6 +734,7 @@ iframe {
 }
 .alert__hide {
   opacity: 0;
+  display: none;
 }
 .alert__button {
   position: absolute;
@@ -736,6 +750,8 @@ iframe {
   color: rgb(255, 255, 255);
   border: none;
   border-radius: 4px;
+  cursor: pointer;
+  width: 50%;
 }
 
 @media only screen and (max-width: 600px) {
