--- a/sass/components/_search.scss
+++ b/sass/components/_search.scss
@@ -7,16 +7,19 @@
         background-color: $color-background;
     }
     &__title{
-        font-size: 1rem;
+        color: $color-font-dark;
+        font-size: 1.8rem;
         background-color:$color-background;
     }
     &__subtitle{
-        font-size: 1rem;
+        color: $color-font-dark;
+        font-size: .8rem;
         background-color:$color-background;
+        margin-bottom: .5rem;
     }
     &__products-count{
-        padding: 1rem;
-        font-size: .5rem;
+        padding: .6rem;
+        font-size: .8rem;
     }
     &__products-search-container{
         text-align: center;
@@ -29,7 +32,6 @@
         color: $color-font-ligth2;
         padding: .5rem;
         border-bottom: 3px solid $color-bg-primary;
-
     }
 
 }
@@ -54,14 +56,6 @@
         padding-left: 2.6rem;
     }
     
-/*     &__input:not(:placeholder-shown){
-
-        + button{
-            transition:  all .8s ease-in;
-            transform: rotate(360deg);
-        } 
-    } */
-    
     &__btn{
         border: 1px solid $color-bg-secondary;
         background-color: $color-bg-secondary;
@@ -71,6 +65,7 @@
         font-size: 1.2rem;
         font-weight: 500;
         box-shadow:0px 5px 5px 0px  #00000050;
+        cursor: pointer;
     }
 
     &__btn:hover{
