--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,7 @@
 @import 'components/dropdown';
 @import 'components/card';
 @import 'components/search';
+@import 'components/alert';
 
 @import 'pages/home';
 @import 'pages/contact';
