--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,6 +24,7 @@
 @import 'pages/contact';
 @import 'pages/register';
 @import 'pages/about-us';
+@import 'pages/cart-detail';
 
 @import 'themes/theme';
 @import 'themes/admin';
