--- a/sass/components/_alert.scss
+++ b/sass/components/_alert.scss
@@ -1,14 +1,13 @@
 .alert {
+    position: relative;
     position: fixed;
-    display: flex;
-    flex-direction: column;
-    width: 95vw;
+    width: 300px;
     align-items: center;
-    opacity: 1;
+    opacity: 0.9;
     z-index: 5;
     align-items: center;
     margin-top: 3rem;
-
+    right: 20px;
 
     &__error {
         position: relative;
@@ -16,8 +15,7 @@
         flex-direction: column;
         text-align: center;
         padding: .8rem;
-        border-radius: 5px;
-        width: 90vw;
+        border-radius: 10px;
         background-color: $color-alert-error;
         color: rgb(236, 232, 232);
     }
@@ -29,17 +27,16 @@
         text-align: center;
         padding: .5rem;
         border-radius: 5px;
-        width: 90vw;
         background-color: $color-alert-success;
         color: rgb(236, 232, 232);
     }
 
     &__title {
-        font-size: 1.5rem;
-        font-weight: bold;
+        font-size: 1rem;
         padding: 1rem;
     }
     &__description{
+        font-size: .8rem;
         padding-bottom: .8rem;
     }
 
