--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -71,10 +71,11 @@
         box-shadow: $shadow0;
     }
 
-
-
     &__btn {
         padding: 5px;
+    }
+    &__area{
+        height: 8rem;
     }
 }
 iframe {
