--- a/sass/pages/_cart-detail.scss
+++ b/sass/pages/_cart-detail.scss
@@ -15,17 +15,16 @@
 }
 
 .row{
-    height: 7rem;
-    overflow: hidden;
     display: flex;
     flex-direction: row;
     margin-top: .5rem;
     width: 80%;
     border-bottom:$color-font-ligth2 solid 1px ;
+
     &__pic{
         position:relative;
         height: 100%;
-        
+        height: 7rem;
         img{
             height: 100%;
         }
@@ -98,3 +97,28 @@
     }
 
 }
+
+
+@media only screen and (max-width: 600px) {
+    .row {
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+    }
+    .row-cart-detail {
+        align-items:flex-start;
+        width: 100%
+    }
+    .total-row{
+        text-align: center;
+    }
+
+    #deleteart{
+        position: absolute;
+        color: rgb(172, 52, 52);
+        left: 5px;
+        top: 5px;
+        cursor: pointer;
+    }
+}
+
