--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,9 +5,14 @@ html
 }
 
 .cards-container{
-    justify-content: center;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+    //justify-content: center;
+    //display: grid;
+    //gap: 10px;
+    //grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:center;
 } 
 
 .whatsapp-container{
