--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,6 +25,7 @@
 @import 'pages/register';
 @import 'pages/about-us';
 @import 'pages/cart-detail';
+@import 'pages/login';
 
 @import 'themes/theme';
 @import 'themes/admin';
