--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,7 @@ body {
   cursor: pointer;
 }
 .user-navbar__icon-container {
+  position: relative;
   display: flex;
   padding-right: 15px;
   color: rgb(236, 227, 227);
@@ -77,10 +78,10 @@ body {
   background-color: rgb(85, 97, 85);
   top: 6rem;
   width: 36px;
+  text-align: center;
 }
 
 .navbar {
-  height: 60 px;
   background-color: rgb(139, 165, 139);
   display: flex;
   align-items: center;
@@ -174,6 +175,10 @@ body {
   color: rgb(85, 97, 85);
 }
 
+.user-icons {
+  display: none;
+}
+
 @media screen and (min-width: 905px) {
   .navbar__menu-label, .navbar__menu-btn {
     display: none;
@@ -188,9 +193,13 @@ body {
     margin-left: 3rem;
   }
 }
-@media screen and (max-width: 505px) {
+@media screen and (max-width: 560px) {
   .user-navbar {
     display: none;
+  }
+  .user-icons {
+    display: flex;
+    flex-direction: row;
   }
 }
 .footer {
@@ -717,7 +726,7 @@ iframe {
   background-color: rgb(139, 165, 139);
   font-family: Arial, Helvetica, sans-serif;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  width: 60vh;
+  width: 30vw;
   border-radius: 5px;
 }
 .form-container__item {
@@ -782,7 +791,7 @@ iframe {
 
 @media only screen and (max-width: 600px) {
   .form-container {
-    width: 90vh;
+    width: 90vw;
   }
 }
 .mainAboutUs {
