--- a/css/main.css
+++ b/css/main.css
@@ -43,35 +43,36 @@ body {
   gap: 0.5rem;
   color: rgb(236, 227, 227);
   align-items: center;
-  padding: 0 1rem;
+  padding-right: 2rem;
   order: 3;
 }
-.user-navbar__user-avatar {
-  padding-right: 10px;
-  width: 50px;
-  cursor: pointer;
-}
 .user-navbar__icon-container {
-  position: relative;
   display: flex;
-  padding-right: 15px;
+  flex-direction: column;
+  padding-right: 0.5rem;
   color: rgb(236, 227, 227);
   font-size: 2rem;
-  text-align: center;
   cursor: pointer;
+  align-items: center;
+}
+.user-navbar__user-avatar {
+  display: flex;
+  flex-direction: column;
+  color: rgb(236, 227, 227);
+  width: 2rem;
+  cursor: pointer;
+  align-items: center;
 }
 .user-navbar__user-name {
-  position: fixed;
   padding: 4px;
   border-radius: 7px;
   font-size: 1rem;
   background-color: rgb(85, 97, 85);
   top: 6rem;
-  width: 45px;
   text-align: center;
+  margin-top: 0.2rem;
 }
 .user-navbar__cart-counter {
-  position: fixed;
   padding: 4px;
   border-radius: 7px;
   font-size: 1rem;
@@ -79,6 +80,11 @@ body {
   top: 6rem;
   width: 36px;
   text-align: center;
+  margin-top: 0.2rem;
+}
+
+.user-navbar2 {
+  display: none;
 }
 
 .navbar {
@@ -101,11 +107,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 10;
 }
 .navbar__menu-btn {
   position: absolute;
   right: 0;
-  top: 0;
   bottom: 0;
   opacity: 0;
 }
@@ -117,6 +123,7 @@ body {
   background-color: rgb(236, 227, 227);
   width: 18px;
   position: relative;
+  margin-top: 1rem;
 }
 .navbar__menu-icon::after, .navbar__menu-icon::before {
   content: "";
@@ -175,10 +182,6 @@ body {
   color: rgb(85, 97, 85);
 }
 
-.user-icons {
-  display: none;
-}
-
 @media screen and (min-width: 905px) {
   .navbar__menu-label, .navbar__menu-btn {
     display: none;
@@ -197,11 +200,54 @@ body {
   .user-navbar {
     display: none;
   }
-  .user-icons {
+  .user-navbar2 {
     display: flex;
     flex-direction: row;
+    color: rgb(236, 227, 227);
+    width: 100%;
+    justify-content: space-around;
+  }
+  .user-icons {
+    display: flex;
+    width: 100%;
+  }
+  .navbar {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
   }
 }
+.dropdown {
+  display: inline-block;
+  position: static;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  width: 150px;
+  overflow: auto;
+  background-color: rgb(85, 97, 85);
+  right: 30px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-content a {
+  display: block;
+  color: rgb(236, 227, 227);
+  padding: 5px;
+  text-decoration: none;
+}
+
+.dropdown-content a:hover {
+  color: rgb(236, 227, 227);
+  background-color: rgb(139, 165, 139);
+}
+
 .footer {
   display: flex;
   flex-direction: column;
@@ -228,15 +274,19 @@ body {
   align-items: center;
   gap: 0.5rem;
   display: inline-block;
+  font-size: 0.8rem;
 }
 .footer__company-name {
   color: rgb(199, 194, 194);
+  font-size: 1rem;
 }
 .footer__copyrigth {
   color: rgb(199, 194, 194);
+  font-size: 0.8rem;
 }
 .footer .footer__contact-icon {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  padding-right: 0.5rem;
 }
 .footer .footer__contact-icon--facebook {
   color: #38529a;
@@ -535,6 +585,10 @@ body {
 @media screen and (max-width: 650px) {
   .product-search__input {
     width: 90%;
+    font-size: medium;
+    font-weight: 500;
+    padding-top: 0.8rem;
+    padding-left: 2.6rem;
   }
 }
 .alert {
