--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -13,7 +13,10 @@
 
     &__contact-item {
         list-style: none;
+
     }
+
+
     &__logo {
         height: 5rem;
         filter: invert(100%);
@@ -25,17 +28,21 @@
         align-items: center;
         gap: .5rem;
         display: inline-block;
+        font-size: .8rem;
     }
 
     &__company-name{
         color: $color-wish-list-off;
+        font-size: 1rem;
     }
     &__copyrigth{
         color: $color-wish-list-off;
+        font-size: .8rem;
     }
 
     .footer__contact-icon {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
+        padding-right: .5rem;
 
         &--facebook {
             color: #38529a;
