--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -12,35 +12,39 @@
     gap:.5rem;
     color:$color-font-ligth;
     align-items: center;
-    padding: 0 1rem;
+    padding-right: 2rem;
     order:3;
 
-    &__user-avatar{
-        padding-right: 10px;
-        width: 50px;
-        cursor: pointer;
-    }
     &__icon-container{
-        position: relative;
         display: flex;
-        padding-right: 15px;
+        flex-direction: column;
+        padding-right: .5rem;
         color: $color-font-ligth;
         font-size: 2rem;
-        text-align: center;
         cursor: pointer;
+        align-items: center;
+    }
+    &__user-avatar{
+        display: flex;
+        flex-direction: column;
+        color: $color-font-ligth;
+        width: 2rem;
+        cursor: pointer;
+        align-items: center;
+        
+
     }
     &__user-name{
-        position: fixed;
         padding: 4px;
         border-radius: 7px;
         font-size: 1rem;
         background-color: $color-bg-secondary;
         top: 6rem;
-        width: 45px;
+        //width: 45px;
         text-align: center;
+        margin-top: .2rem;
     }
     &__cart-counter{
-        position: fixed;
         padding: 4px;
         border-radius: 7px;
         font-size: 1rem;
@@ -48,8 +52,13 @@
         top: 6rem;
         width: 36px;
         text-align: center;
+        margin-top: .2rem;
     }
 
+}
+
+.user-navbar2{
+    display: none;
 }
 
 .navbar{
@@ -73,11 +82,11 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        z-index: 10;
     }
     &__menu-btn{
         position: absolute;
         right: 0;
-        top: 0;
         bottom: 0;
         opacity: 0;
     }
@@ -91,6 +100,7 @@
         background-color: $color-font-ligth;
         width: 18px;
         position: relative;
+        margin-top: 1rem;
 
         &::after, &::before{
             content: '';
@@ -120,6 +130,7 @@
             transform: rotate(-45deg);
             top: 0;
         }
+
     }
     
 
@@ -135,7 +146,6 @@
         flex-direction: column;
         align-items: center;
         justify-content: space-evenly;
-
     }
 
     &__nav-item{
@@ -162,9 +172,6 @@
     
 }
 
-.user-icons{
-    display: none;
-}
 
 @media screen and (min-width: 905px){
     .navbar{
@@ -188,10 +195,52 @@
 
     .user-navbar{
         display: none;
-        
     }
-    .user-icons{
+
+    .user-navbar2{
         display: flex;
         flex-direction: row;
+        color:$color-font-ligth;
+        width: 100%;
+        justify-content: space-around;
+    }
+
+    .user-icons{
+        display: flex;
+        width: 100%;
+    }
+
+    .navbar{
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        justify-content: center
     }
 }
+
+
+.dropdown {
+    display: inline-block;
+    position:static;
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    width: 150px;
+    overflow: auto;
+    background-color:$color-bg-secondary ;
+    right: 30px;
+  }
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  .dropdown-content a {
+    display: block;
+    color: $color-font-ligth;
+    padding: 5px;
+    text-decoration: none;
+  }
+  .dropdown-content a:hover {
+    color: $color-font-ligth;
+    background-color: $color-bg-primary;
+  }
