creacion de user profile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,6 +26,7 @@
 @import 'pages/about-us';
 @import 'pages/cart-detail';
 @import 'pages/login';
+@import 'pages/profile';
 
 @import 'themes/theme';
 @import 'themes/admin';
