--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ body {
   width: 2rem;
   cursor: pointer;
   align-items: center;
+  border-radius: 100%;
 }
 .user-navbar__user-name {
   padding: 4px;
@@ -716,10 +717,7 @@ html {
 }
 
 .titulo-h1 {
-  /*     font-size: 1.5rem;
-      border-bottom: 2px solid $color-bg-primary;
-      margin-bottom: .8rem;
-      display: block; */
+  margin-top: 0.8rem;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   border-bottom: 2px solid rgb(139, 165, 139);
@@ -1009,4 +1007,136 @@ iframe {
     top: 5px;
     cursor: pointer;
   }
+}
+.user {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 40vw;
+  padding: 2rem;
+  border-radius: 10px;
+  background-color: rgb(139, 165, 139);
+}
+.user__pic {
+  height: 150px;
+  position: relative;
+  margin-bottom: 0.5rem;
+}
+.user__pic img {
+  border-radius: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.user__pic label {
+  position: absolute;
+  color: rgb(236, 227, 227);
+  right: 5px;
+  top: 5px;
+  cursor: pointer;
+}
+.user__title {
+  font-size: 1.2rem;
+  font-family: Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  color: rgb(236, 227, 227);
+  padding: 5px;
+  border-radius: 5px;
+}
+.user__container {
+  position: relative;
+  background-color: rgb(85, 97, 85);
+  border-radius: 5px 5px 0 0;
+  padding: 0.3rem;
+  width: 35vw;
+}
+.user__description {
+  font-size: 1.2rem;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgba(143, 138, 138, 0.637);
+  color: rgb(236, 227, 227);
+  text-transform: capitalize;
+  padding: 0.3rem;
+  border-radius: 5px;
+  width: 35vw;
+  text-align: center;
+}
+.user__name {
+  margin-top: 0.6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 0 0 5px 5px;
+}
+.user__email {
+  margin-top: 0.6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 0 0 5px 5px;
+}
+.user__born-date {
+  margin-top: 0.6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 0 0 5px 5px;
+}
+.user__country {
+  margin-top: 0.6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 0 0 5px 5px;
+}
+.user__password {
+  margin-top: 0.6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 0 0 5px 5px;
+}
+.user__edit {
+  position: absolute;
+  color: rgb(236, 227, 227);
+  cursor: pointer;
+  right: 5px;
+}
+
+@media screen and (max-width: 800px) {
+  .user {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 99vw;
+  }
+  .user__container {
+    width: 90vw;
+  }
+  .user__description {
+    width: 99vw;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .user {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 70vw;
+  }
+  .user__container {
+    width: 65vw;
+  }
+  .user__description {
+    width: 65vw;
+  }
+}
+#email {
+  text-transform: lowercase;
 }/*# sourceMappingURL=main.css.map */
