--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -33,10 +33,9 @@
 }
 
 .titulo-h1 {
-/*     font-size: 1.5rem;
-    border-bottom: 2px solid $color-bg-primary;
-    margin-bottom: .8rem;
-    display: block; */
+
+    margin-top: .8rem;
+
 
 
         font-family: Arial, Helvetica, sans-serif;
