--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,6 +19,7 @@
 @import 'components/card';
 @import 'components/search';
 @import 'components/alert';
+@import 'components/modal';
 
 @import 'pages/home';
 @import 'pages/contact';
