--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,6 +3,8 @@ $color-bg-primary: rgb(139, 165, 139);
 $color-bg-secondary: rgb(85, 97, 85);
 $color-bg-date: rgb(139, 165, 139);
 
+$color-modal: rgb(106, 121, 106);
+
 
 $color-font-dark: rgb(27, 26, 26);
 $color-font-ligth: rgb(236, 227, 227);  
@@ -20,3 +22,12 @@ $shadow1: rgba(0, 0, 0, 0.35) 0px 5px 5px;
 /* REGISTER ALERT */
 $color-alert-error: rgb(212, 96, 96) ;
 $color-alert-success: rgb(96, 212, 96) ;
+
+
+/* Botones OK y Cancel */
+$color-ok-btn: rgb(41, 128, 59);
+$color-ok-btn-hv: rgb(45, 150, 66);
+$color-cancel-btn: rgb(102, 40, 40);
+
+$color-wl-btn: rgb(158, 85, 85);
+$color-wl-btn-hv: rgb(223, 28, 28);
